[package]
name = "oz-policy-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
description = "Stellar transaction recorder: ingest a tx (hash or simulate) and emit a deterministic Recording JSON document."

[dependencies]
oz-policy-core = { path = "../oz-policy-core" }
stellar-rpc-client = { workspace = true }
stellar-xdr = { workspace = true, features = ["curr", "std", "base64", "serde"] }
# needed for `tokio::time::timeout` wrapping rpc awaits.
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
hex = "=0.4.3"
sha2 = "=0.10.9"

[dev-dependencies]
tokio = { workspace = true }
