# Phase 9 Stream A — cargo-fuzz harness for the recorder's XDR decode path.
#
# Excluded from the workspace via `/Cargo.toml` `[workspace] exclude = […]`.
# See `crates/oz-policy-codegen/fuzz/Cargo.toml` for the rationale.

[package]
name = "oz-policy-recorder-fuzz"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "cargo-fuzz harness for oz-policy-recorder XDR decode (Phase 9)"

[package.metadata]
cargo-fuzz = true

[dependencies]
# Pinned to match the workspace declaration in `/Cargo.toml`.
arbitrary = { version = "=1.4.2", features = ["derive"] }
libfuzzer-sys = "=0.4.12"
# base64: turn the fuzzer's raw bytes into the base64 envelope/meta strings
# the recorder's public `decode_from_xdr_blobs` entrypoint expects. Pinned to
# the workspace-declared `=0.22.1` so cargo's resolver unifies our copy with
# the one already used by `oz-policy-mcp`.
base64 = "=0.22.1"
# Production crate under test. No `arbitrary` feature needed — this target
# fuzzes the *bytes-in* path of the decoder, not a structured spec.
oz-policy-recorder = { path = ".." }
oz-policy-core = { path = "../../oz-policy-core" }

[[bin]]
name = "recording_decode_panic_free"
path = "fuzz_targets/recording_decode_panic_free.rs"
test = false
doc = false
bench = false
