# cargo-fuzz harness for the recorder xdr decode path.
# excluded from workspace; pins versions to match `/Cargo.toml`.

[package]
name = "oz-policy-recorder-fuzz"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "cargo-fuzz harness for oz-policy-recorder XDR decode"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "=1.4.2", features = ["derive"] }
libfuzzer-sys = "=0.4.12"
base64 = "=0.22.1"
oz-policy-recorder = { path = ".." }
oz-policy-core = { path = "../../oz-policy-core" }

[[bin]]
name = "recording_decode_panic_free"
path = "fuzz_targets/recording_decode_panic_free.rs"
test = false
doc = false
bench = false
